--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -72,16 +72,9 @@
               <hr>
               <p class="published">Published <time datetime="{{ page.date | date: "%F %R" }}">{{ page.date | date_to_string }}</time></p>
             </section>
+            <section class="copyright">All content copyright <a href="{{@blog.url}}/">Pepper's Pawprint</a> &copy; {{ site.time | date: '%Y' }}<br>All rights reserved.</section>
           </div>
           {{/post}}
-          <div class="isRight">
-            <h5 class="index-headline featured"><span>Supported by</span></h5>
-            <footer class="site-footer">
-              <div class="inner">
-                <section class="copyright">All content copyright <a href="{{@blog.url}}/">{{site.author}}</a> &copy; {{ site.time | date: '%Y' }}<br>All rights reserved.</section>
-              </div>
-            </footer>
-          </div>
         </div>
         {%if site.disqus %}
         <div id="disqus_thread"></div>
