--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -63,14 +63,7 @@
           </section>
         </footer>
         <div class="bottom-teaser cf">
-          <h5 class="index-headline featured"><span>Written by</span></h5>
-          <section class="author">
-            <div class="author-image" style="background-image: url({{site.author_image | prepend: site.baseurl}})">Blog Logo</div>
-            <h4>{{ site.author }}</h4>
-            <p class="bio">{{author.bio}}</p>
-            <hr>
-            <p class="published">Published <time datetime="{{ page.date | date: "%F %R" }}">{{ page.date | date_to_string }}</time></p>
-          </section>
+          <h5 class="index-headline featured"><span>Published <time datetime="{{ page.date | date: "%F %R" }}">{{ page.date | date_to_string }}</time></span></h5>
           <section class="copyright">All content copyright <a href="{{@blog.url}}/">{{site.name}}</a> &copy; {{ site.time | date: '%Y' }}<br>All rights reserved.</section>
           {{/post}}
         </div>
