--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 
     {% include footer.html %}
     {% include javascripts.html %}
-
+    {% include cookie-consent.html %}
   </body>
 
 </html>
