--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,8 @@
     <!-- content end -->
 
     {% include footer.html %}
+    {% include cookie_consent.html %}
     {% include javascripts.html %}
-    {% include cookie-consent.html %}
   </body>
 
 </html>
