--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -39,5 +39,6 @@
 }(jQuery));
 </script>
 {% if site.google_analytics %}
+{% include cookie_consent.html %}
 {% include google_analytics.html %}
 {% endif %}
