--- a/_includes/cookie_consent.html
+++ b/_includes/cookie_consent.html
@@ -32,7 +32,9 @@
     }
 
     if(readCookie('cookie-notice-dismissed')=='true') {
-        
+        {% if site.google_analytics %}
+        {% include google_analytics.html %}
+        {% endif %}
     } else {
         document.getElementById('cookie-notice').style.display = 'block';
     }
