included the google analytics in the cookie consent

--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -39,5 +39,5 @@
 }(jQuery));
 </script>
 {% if site.google_analytics %}
-{% include cookie_consent.html %}
+{% include cookie_google_ananalytics.html %}
 {% endif %}
