Updated to open the email and instagram in a new tab

--- a/themes/customized/layouts/_default/single.html
+++ b/themes/customized/layouts/_default/single.html
@@ -34,8 +34,8 @@
             </p> -->
             <h5>Email and Social</h5>
             <p>
-              E-mail: <a href="{{ .Site.Params.mail }}">{{ .Site.Params.mail_title }}</a><br>
-              Instagram: <a href="{{ .Site.Params.instagram }}">{{ .Site.Title }}</a>
+              E-mail: <a href="{{ .Site.Params.mail }}" target="_blank">{{ .Site.Params.mail_title }}</a><br>
+              Instagram: <a href="{{ .Site.Params.instagram }}" target="_blank">{{ .Site.Title }}</a>
             </p>
           </div>
         </aside>
