--- a/themes/customized/layouts/partials/head.html
+++ b/themes/customized/layouts/partials/head.html
@@ -26,7 +26,7 @@
 <link rel="alternate" href="{{ .Permalink }}" hreflang="{{ .Site.LanguageCode }}">
 {{ end }}
 
-<link rel="shortcut icon" href="{{ .Site.Params.faviconImage }}" > 
+<link rel="shortcut icon" href="{{ .Site.Params.faviconImage | absURL }}" > 
 
 {{- with .Site.Params.customFavicon -}}
 <link rel="icon" href="{{ . | absURL }}" />
