--- a/themes/customized/static/css/layout.css
+++ b/themes/customized/static/css/layout.css
@@ -671,7 +671,8 @@ img { border-radius: 3px; }
    width: 100%;
 }
 
-.post .post-thumb img {
+.post .post-thumb img,
+.post-thumb img {
    height: 246px;
    width: 100%;
    object-fit: cover;
