--- a/themes/customized/layouts/posts/single.html
+++ b/themes/customized/layouts/posts/single.html
@@ -74,10 +74,10 @@
             {{ end }}
           {{ end }}
 
-          <ul class="post-nav cf">
+          <!--<ul class="post-nav cf">
             <li class="prev"><a rel="prev" href="#"><strong>Previous Article</strong> Duis Sed Odio Sit Amet Nibh Vulputate</a></li>
             <li class="next"><a rel="next" href="#"><strong>Next Article</strong> Morbi Elit Consequat Ipsum</a></li>
-          </ul>
+          </ul>-->
         </div>
       </article> <!-- post end -->
     </div> <!-- Primary End -->
