--- a/themes/customized/layouts/partials/head.html
+++ b/themes/customized/layouts/partials/head.html
@@ -31,8 +31,9 @@
 {{- with .Site.Params.customFavicon -}}
 <link rel="icon" href="{{ . | absURL }}" />
 {{- end }}
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+{{ range .Site.Params.basicCSS }}
+<link rel="stylesheet" href="{{ "css/" | absURL }}{{ . }}">
+{{ end }}
 {{ range .Site.Params.customCSS }}
 <link rel="stylesheet" href="{{ "css/" | absURL }}{{ . }}">
 {{ end }}
