--- a/themes/customized/layouts/_default/single.html
+++ b/themes/customized/layouts/_default/single.html
@@ -19,7 +19,12 @@
             <img src="{{ . | absURL }}" alt="post-image" title="post-image">
           </div>
           {{ end }}
-          <p>{{ .Content }}</p>
+          <p>
+            {{ .Content }}
+            {{ with .Params.privacyOptOut -}}
+              <a href="javascript:disableGoogleAnalytics()">{{ . }}</a>
+            {{ end }}
+          </p>
         </section> <!-- section end -->
      </div> <!-- primary end -->
 
