Deleted the revoke button

--- a/themes/customized/layouts/partials/cookies.html
+++ b/themes/customized/layouts/partials/cookies.html
@@ -18,7 +18,8 @@
             "allow": '{{ i18n "cookie_allow" }}',
             "link": '{{ i18n "cookie_link" }}',
             "href": '{{ "privacy" | absURL }}'
-        }
+        },
+        "revokeBtn": false
     });
 
     function onInitialise(status) {
