--- a/themes/customized/layouts/_default/taxonomy.html
+++ b/themes/customized/layouts/_default/taxonomy.html
@@ -43,11 +43,13 @@
           {{ end }}
         </p>
       </div>
-      {{ with .Params.featured_image -}}
-        <div class="post-thumb">
-          <img src="{{ . | absURL }}" alt="post-image" title="post-image">
-        </div>
-      {{ end }}
+      <a href="{{ .Permalink }}" title="">
+        {{ with .Params.featured_image -}}
+          <div class="post-thumb">
+            <img src="{{ . | absURL }}" alt="post-image" title="post-image">
+          </div>
+        {{ end }}
+      </a>
       <div class="post-content">
           <p>{{ .Description }}</p>
       </div>
