Break the word in case it is too long

--- a/themes/customized/static/css/default.css
+++ b/themes/customized/static/css/default.css
@@ -54,6 +54,7 @@ time, mark, audio, video {
    font-size: 100%;
    vertical-align: baseline;
    background: transparent;
+   word-break: break-word;
 }
 
 article,aside,details,figcaption,figure,
