--- a/themes/customized/layouts/partials/head.html
+++ b/themes/customized/layouts/partials/head.html
@@ -46,3 +46,7 @@
 {{- template "_internal/opengraph.html" . -}}
 {{- template "_internal/schema.html" . -}}
 {{- template "_internal/twitter_cards.html" . -}}
+
+{{- if and .Site.GoogleAnalytics (not .Site.IsServer) -}}
+  {{ template "_internal/google_analytics_async.html" . }}
+{{- end -}}
