Updated the docs folder

--- a/docs/css/layout.css
+++ b/docs/css/layout.css
@@ -33,7 +33,9 @@ body { background-color: #D2D8D8; }
 img { border-radius: 3px; }
 .content-outer { background: #fff }
 
-
+.cc-revoke {
+   display: none;
+}
 
 /* page title */
 #page-title {
