Added the cookies partial to the scripts

--- a/themes/customized/layouts/partials/scripts.html
+++ b/themes/customized/layouts/partials/scripts.html
@@ -6,6 +6,8 @@
 <script src="{{ "js/" | absURL }}{{ . }}" crossorigin="anonymous"></script>
 {{ end }}
 
+{{ partial "cookies.html" . }}
+
 
 <!-- {{- if and (or .Params.mathjax (and .Site.Params.mathjax (ne .Params.mathjax false))) (or .IsPage .IsHome) }}
 <script>
