--- a/themes/customized/layouts/partials/cookies.html
+++ b/themes/customized/layouts/partials/cookies.html
@@ -17,80 +17,43 @@
             "deny": '{{ i18n "cookie_dismiss" }}',
             "allow": '{{ i18n "cookie_allow" }}',
             "link": '{{ i18n "cookie_link" }}',
-            "href": '{{ "privacy" | absURL }}'
-        }
+            "href": '{{ "privacy" | safeURL }}'
+        },
+        onInitialise: initialise,
+        onStatusChange: statusChange
     });
 
-    function onInitialise(status) {
-        var type = this.options.type;
-        var didConsent = this.hasConsented();
-        if (type == 'opt-in' && didConsent) {
-            // enable cookies
-            enableGoogleAnalytics();
-        }
-        if (type == 'opt-out' && !didConsent) {
-            // disable cookies
+    function initialise(status) {
+        var type = this.options.type
+        if (type === 'opt-in' && status === 'allow') {
+            activateTemplate('#cookieConsent')
+        } else {
             disableGoogleAnalytics();
         }
     }
 
-    function onStatusChange(status, chosenBefore) {
+    function statusChange(status, chosenBefore) {
         var type = this.options.type;
-        var didConsent = this.hasConsented();
-        if (type == 'opt-in' && didConsent) {
-            // enable cookies
-            enableGoogleAnalytics();
-        }
-        if (type == 'opt-out' && !didConsent) {
-            // disable cookies
+        if (type === 'opt-in' && status === 'allow') {
+            activateTemplate('#cookieConsent')
+        } else {
             disableGoogleAnalytics();
         } 
     }
 
-    function onRevokeChoice() {
-        var type = this.options.type;
-        if (type == 'opt-in') {
-            // disable cookies
-            disableGoogleAnalytics();
-        }
-        if (type == 'opt-out') {
-            // enable cookies
+    // does the browser support <template>? (all but legacy IE)
+    function supportsTemplate() {
+        return 'content' in document.createElement('template')
+    }
+
+    function activateTemplate(selector) {
+        if (supportsTemplate) {
+            var content = document.querySelector(selector).content;
+            var clone = document.importNode(content, true);
+            document.body.appendChild(clone);
+        } else {
             enableGoogleAnalytics();
         }
     }
-
-    function enableGoogleAnalytics() {
-        // check the do not track option from the browser
-        var dnt = (navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack);
-        var doNotTrack = (dnt == "1" || dnt == "yes");
-        if (!doNotTrack) {
-            window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-            if (window.sessionStorage) {
-                var GA_SESSION_STORAGE_KEY = 'ga:clientId';
-                ga('create', 'UA-154765901-1', {
-                'storage': 'none',
-                'clientId': sessionStorage.getItem(GA_SESSION_STORAGE_KEY)
-            });
-            ga(function(tracker) {
-                sessionStorage.setItem(GA_SESSION_STORAGE_KEY, tracker.get('clientId'));
-            });
-        }
-            ga('set', 'anonymizeIp', true);
-            ga('send', 'pageview');
-        }
-    }
-
-    function disableGoogleAnalytics() {
-        var gaProperty = '{{ .Site.GoogleAnalytics }}';
-        var disableStr = 'ga-disable-' + gaProperty;
-        if (document.cookie.indexOf(disableStr + '=true') > -1) {
-            window[disableStr] = true;
-        }
-        function gaOptout() {
-            document.cookie = disableStr + '=true; expires=Thu, 31 Dec 2099 23:59:59 UTC; path=/';
-            window[disableStr] = true;
-        }
-    }
-
 </script>
 <script async src='https://www.google-analytics.com/analytics.js'></script>
