--- a/themes/customized/layouts/partials/head.html
+++ b/themes/customized/layouts/partials/head.html
@@ -47,6 +47,8 @@
 {{- template "_internal/schema.html" . -}}
 {{- template "_internal/twitter_cards.html" . -}}
 
-{{- if and .Site.GoogleAnalytics (not .Site.IsServer) -}}
-  {{ template "_internal/google_analytics_async.html" . }}
-{{- end -}}
+<template id="cookieConsent">
+  {{- if and .Site.GoogleAnalytics (not .Site.IsServer) -}}
+    {{ template "_internal/google_analytics_async.html" . }}
+  {{- end -}}
+</template>
