Moved the google analytics functions and added the gaOptout options

--- a/themes/customized/layouts/_default/single.html
+++ b/themes/customized/layouts/_default/single.html
@@ -22,7 +22,7 @@
           <p>
             {{ .Content }}
             {{ with .Params.privacyOptOut -}}
-              <a id="privacyOptOut" href="javascript:disableGoogleAnalytics()">{{ . }}</a>
+              <a id="privacyOptOut" href="javascript:gaOptout()">{{ . }}</a>
             {{ end }}
           </p>
         </section> <!-- section end -->
