--- a/themes/customized/layouts/partials/cookies.html
+++ b/themes/customized/layouts/partials/cookies.html
@@ -24,6 +24,7 @@
     });
 
     function initialise(status) {
+        alert("initialise status: " + status + " cookie: " + document.cookie);
         var type = this.options.type
         if (type === 'opt-in' && status === 'allow') {
             activateTemplate('#cookieConsent')
@@ -61,25 +62,25 @@
         var dnt = (navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack);
         var doNotTrack = (dnt == "1" || dnt == "yes");
         if (!doNotTrack) {
-        window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-        if (window.sessionStorage) {
-            var GA_SESSION_STORAGE_KEY = 'ga:clientId';
-            ga('create', 'UA-154765901-1', {
-                'storage': 'none',
-                'clientId': sessionStorage.getItem(GA_SESSION_STORAGE_KEY)
-            });
-            ga(function(tracker) {
-                sessionStorage.setItem(GA_SESSION_STORAGE_KEY, tracker.get('clientId'));
-            });
-        }
-        ga('set', 'anonymizeIp', true);
-        ga('send', 'pageview');
+            window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+            if (window.sessionStorage) {
+                var GA_SESSION_STORAGE_KEY = 'ga:clientId';
+                ga('create', '{{ .GoogleAnalytics }}', {
+                    'storage': 'none',
+                    'clientId': sessionStorage.getItem(GA_SESSION_STORAGE_KEY)
+                });
+                ga(function(tracker) {
+                    sessionStorage.setItem(GA_SESSION_STORAGE_KEY, tracker.get('clientId'));
+                });
+            }
+            ga('set', 'anonymizeIp', true);
+            ga('send', 'pageview');
         }
     }
 
     function disableGoogleAnalytics() {
         // Disable tracking if the opt-out cookie exists.
-        var gaProperty = '{{ .Site.GoogleAnalytics }}';
+        var gaProperty = '{{ .GoogleAnalytics }}';
         var disableStr = 'ga-disable-' + gaProperty;
         if (document.cookie.indexOf(disableStr + '=true') > -1) {
             window[disableStr] = true;
