--- a/themes/customized/layouts/partials/cookies.html
+++ b/themes/customized/layouts/partials/cookies.html
@@ -65,7 +65,7 @@
             window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
             if (window.sessionStorage) {
                 var GA_SESSION_STORAGE_KEY = 'ga:clientId';
-                ga('create', '{{ .GoogleAnalytics }}', {
+                ga('create', 'UA-154765901-1', {
                     'storage': 'none',
                     'clientId': sessionStorage.getItem(GA_SESSION_STORAGE_KEY)
                 });
@@ -80,7 +80,7 @@
 
     function disableGoogleAnalytics() {
         // Disable tracking if the opt-out cookie exists.
-        var gaProperty = '{{ .GoogleAnalytics }}';
+        var gaProperty = 'UA-154765901-1';
         var disableStr = 'ga-disable-' + gaProperty;
         if (document.cookie.indexOf(disableStr + '=true') > -1) {
             window[disableStr] = true;
