Updated the title header style

--- a/themes/customized/layouts/_default/single.html
+++ b/themes/customized/layouts/_default/single.html
@@ -2,8 +2,7 @@
 <div id="page-title">
   <div class="row">
      <div class="ten columns centered text-center">
-        <h1>{{ .Title }}<span>.</span></h1>
-        <p>{{ .Description }}</p>
+        <h1>{{ .Title }}</h1>
      </div>
   </div>
 </div>
