--- a/themes/customized/static/css/layout.css
+++ b/themes/customized/static/css/layout.css
@@ -39,17 +39,14 @@ img { border-radius: 3px; }
 
 /* page title */
 #page-title {
-   background: #383232;
-   padding-top: 20px;
-   padding-bottom: 40px;
-   margin-top: 78px;
+   background-color: #ffffff;
+   padding-top: 30px;
+   margin-top: 88px;
 }
 #page-title h1 {
    font: 50px/60px raleway-bold, sans-serif;
-   color: #fff;
    padding: 0;
    margin: 0;
-   text-shadow: 0px 1px 5px rgba(0, 0, 0, .3);
 }
 #page-title h1 span,
 #page-title a { color: #11ABB0; }
@@ -58,7 +55,6 @@ img { border-radius: 3px; }
    padding: 0;
    margin: 12px 5% 0;
    color: #b4a9a9;
-   text-shadow: 0px 1px 2px rgba(0, 0, 0, .3);
 }
 
 /* page content */
