--- a/themes/customized/layouts/_default/section.html
+++ b/themes/customized/layouts/_default/section.html
@@ -1,30 +1,100 @@
-{{ define "title" }}{{ i18n "archive" }} · {{ .Title }} · {{ .Site.Title }}{{ end }}
 {{ define "header" }}
-<div class="container header-wrapper">
+<div id="page-title">
   <div class="row">
-    <div class="col-lg-12">
-      <div class="header-content">
-        <h1 class="header-title text-uppercase">
-          {{ i18n "archive" }} : {{ .Title }}
-        </h1>
-        <div class="header-underline"></div>
-      </div>
-    </div>
+     <div class="ten columns centered text-center">
+      <h1>{{i18n "blog" }}</h1>
+     </div>
   </div>
 </div>
 {{ end }}
+
 {{ define "main" }}
-{{- $paginator := .Paginate .Data.Pages }}
-<div class="archive-container">
-    <div class="container content archive">
-      <h2>{{ .Title }}{{ if $paginator.HasPrev }} <small>- {{ i18n "page" }} {{ $paginator.PageNumber }}</small>{{ end }}</h2>
-        <dl class="row">
-            {{ range $paginator.Pages -}}
-            <dt class="col-md-3">{{ .Date.Format (.Site.Params.dateFormatToUse | default "Mon 02 January 2006") }}</dt>
-            <dd class="col-md-9"><a href="{{ .Permalink }}">{{ .Title }}</a></dd>
+<div class="content-outer">
+  <div id="page-content" class="row">
+    <div id="primary" class="eight columns">
+    {{- $pages := .Pages -}}
+    {{- if .IsHome -}}
+      {{- $pages = where .Site.RegularPages "Type" "posts" -}}
+    {{- end -}}
+    {{- $paginator := .Paginate $pages -}}
+    
+    {{ range $paginator.Pages -}}
+    <article class="post">
+      <div class="entry-header cf">
+        <h1><a href="{{ .Permalink }}" title="">{{ .Title }}</a></h1>
+        <p class="post-meta">
+          <time class="date" datetime="2014-01-14T11:24">{{ .Date.Format (.Site.Params.dateFormatToUse | default "Mon 02 January 2006") }}</time>
+          {{ with .Params.categories -}}
+          {{ $.Scratch.Set "firstcategory" true }}
+          /
+          <span class="categories">
+              {{ range . -}}
+              {{- $name := . -}}
+              {{- with $.Site.GetPage "taxonomy" (printf "/categories/%s" $name) | default ($.Site.GetPage "taxonomy" (printf "/categories/%s" ($name | urlize))) -}}
+                {{- if not ($.Scratch.Get "firstcategory") -}}
+                / 
+                {{ else -}}
+                {{- $.Scratch.Set "firstcategory" false -}}
+                {{- end -}}
+                <a href="{{ .Permalink }}">{{ $name }}</a>
+              {{- end -}}
+              {{ end }}
+          </span>
+          {{ end }}
+        </p>
+      </div>
+      <a href="{{ .Permalink }}" title="">
+        {{ with .Params.featured_image -}}
+          <div class="post-thumb">
+            <img src="{{ . | absURL }}" alt="post-image" title="post-image">
+          </div>
+        {{ end }}
+      </a>
+      <div class="post-content">
+          <p>{{ .Description }}</p>
+      </div>
+      <!--<a href="{{ .Permalink }}" class="button">Read more...</a>-->
+    </article>
+    {{ end }}
+
+    <!-- Pagination -->
+    {{ partial "pagination.html" . }}
+    </div> <!-- Primary End-->
+
+    <div id="secondary" class="four columns end">
+      <aside id="sidebar">
+        <div class="widget widget_categories">
+          <h5 class="widget-title">{{ i18n "category" }}</h5>
+          <ul class="link-list cf">
+            {{ range .Site.Taxonomies.categories }}
+            <li><a href="{{ .Page.Permalink }}">{{ .Page.Title }} ({{ .Count }})</a></li>
             {{ end }}
-        </dl>
-    </div>
+          </ul>
+        </div>
+          
+        <div class="widget widget_tag_cloud">
+          <h5 class="widget-title">{{ i18n "tags" }}</h5>
+          <div class="tagcloud cf">
+            {{ range .Site.Taxonomies.tags }}
+            <a href="{{ .Page.Permalink }}">{{ .Page.Title }} ({{ .Count }})</a>
+            {{ end }}
+          </div>
+        </div>
+
+        {{ if .Site.Params.enableRelated -}}
+        {{- $related := .Site.RegularPages.Related . | first 5 -}}
+        {{- with $related }}
+            <h4>{{ i18n "related" }}</h4>
+            <dl class="row">
+            {{ range . }}
+                <dt class="col-md-3">{{ .Date.Format (.Site.Params.dateFormatToUse | default "Mon 02 January 2006") }}</dt>
+                <dd class="col-md-9"><a href="{{ .RelPermalink }}">{{ .Title }}</a></dd>
+            {{ end }}
+            </dl>
+        {{ end }}
+        {{ end }}
+      </aside> <!-- Sidebar End -->
+    </div> <!-- Secondary End-->
+  </div>
 </div>
-{{ partial "pagination.html" . }}
 {{ end }}
