Updated the color grey scale

--- a/themes/customized/assets/sass/variables.scss
+++ b/themes/customized/assets/sass/variables.scss
@@ -1,15 +1,15 @@
 $color-background: #fff;
 
-$color-grey-100: #000;
-$color-grey-90: #1B1B1B;
-$color-grey-80: #303030;
-$color-grey-70: #474747;
-$color-grey-60: #5E5E5E;
-$color-grey-50: #777777;
-$color-grey-40: #919191;
-$color-grey-30: #ABABAB;
-$color-grey-20: #C6C6C6;
-$color-grey-10: #E2E2E2;
+$color-grey-100: #191D1F;
+$color-grey-90: #3C3F41;
+$color-grey-80: #535657;
+$color-grey-70: #6A6C6D;
+$color-grey-60: #8C8E8F;
+$color-grey-50: #BABBBC;
+$color-grey-40: #D1D2D2;
+$color-grey-30: #DDDDDD;
+$color-grey-20: #E8E8E9;
+$color-grey-10: #F4F4F4;
 
 $color-secondary: #EDDCAC;
 
