Renamed color background to color white

--- a/themes/customized/assets/sass/variables.scss
+++ b/themes/customized/assets/sass/variables.scss
@@ -1,7 +1,7 @@
 @import 'fonts';
 
 /* color palette */
-$color-background: #fff;
+$color-white: #fff;
 
 $color-grey-100: #191D1F;
 $color-grey-90: #3C3F41;
