--- a/themes/customized/assets/sass/header.scss
+++ b/themes/customized/assets/sass/header.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 header {
-	background-color: $color-background;
+	background-color: $color-white;
 	padding-bottom: $spacing-s;
 	padding-top: $spacing-s;
 
