Added a secondary darker color

--- a/themes/customized/assets/sass/variables.scss
+++ b/themes/customized/assets/sass/variables.scss
@@ -15,6 +15,7 @@ $color-grey-20: #E8E8E9;
 $color-grey-10: #F4F4F4;
 
 $color-secondary: #EDDCAC;
+$color-secondary-darker: #D4C49B;
 
 /* font family */
 $font-family: notosans-regular, sans-serif;
