--- a/themes/customized/layouts/partials/footer.html
+++ b/themes/customized/layouts/partials/footer.html
@@ -35,6 +35,10 @@
         </li> 
       </ul>
     </div>
-    <div id="go-top" style="display: block;"><a title="Back to Top" href="#"><i class="fas fa-chevron-up"></i>Go To Top</a></div>
+    <div id="go-top">
+      <a title="Back to Top" href="#">
+        <i class="fas fa-chevron-up"></i>
+      </a>
+    </div>
   </div>
 </footer>
