--- a/themes/customized/layouts/_default/section.html
+++ b/themes/customized/layouts/_default/section.html
@@ -1,9 +1,7 @@
 {{ define "header" }}
-<div id="page-title">
-  <div class="row">
-     <div class="ten columns centered text-center">
-      <h1>{{i18n "blog" }}</h1>
-     </div>
+<div class="row">
+  <div class="ten columns centered text-center">
+    <h1>{{i18n "blog" }}</h1>
   </div>
 </div>
 {{ end }}
@@ -63,18 +61,18 @@
 
     <div id="secondary" class="four columns end">
       <aside id="sidebar">
-        <div class="widget widget_categories">
-          <h5 class="widget-title">{{ i18n "category" }}</h5>
-          <ul class="link-list cf">
+        <div class="widget">
+          <h2 class="widget-title">{{ i18n "category" }}</h2>
+          <ul class="link-list">
             {{ range .Site.Taxonomies.categories }}
             <li><a href="{{ .Page.Permalink }}">{{ .Page.Title }} ({{ .Count }})</a></li>
             {{ end }}
           </ul>
         </div>
           
-        <div class="widget widget_tag_cloud">
-          <h5 class="widget-title">{{ i18n "tags" }}</h5>
-          <div class="tagcloud cf">
+        <div class="widget">
+          <h2 class="widget-title">{{ i18n "tags" }}</h2>
+          <div class="tagcloud clearfix">
             {{ range .Site.Taxonomies.tags }}
             <a href="{{ .Page.Permalink }}">{{ .Page.Title }} ({{ .Count }})</a>
             {{ end }}
@@ -84,7 +82,7 @@
         {{ if .Site.Params.enableRelated -}}
         {{- $related := .Site.RegularPages.Related . | first 5 -}}
         {{- with $related }}
-            <h4>{{ i18n "related" }}</h4>
+            <h2>{{ i18n "related" }}</h2>
             <dl class="row">
             {{ range . }}
                 <dt class="col-md-3">{{ .Date.Format (.Site.Params.dateFormatToUse | default "Mon 02 January 2006") }}</dt>
