Added the font family medium

--- a/themes/customized/assets/sass/footer.scss
+++ b/themes/customized/assets/sass/footer.scss
@@ -22,7 +22,7 @@ footer {
 
   .footer-nav li {
     a, a:visited {
-      font-family: $font-family-bold;
+      font-family: $font-family-medium;
       font-size: $font-size-h2;
     }
   }
