--- a/themes/customized/assets/sass/variables.scss
+++ b/themes/customized/assets/sass/variables.scss
@@ -20,6 +20,7 @@ $color-secondary-darker: #D4C49B;
 /* font family */
 $font-family: roboto-regular, sans-serif;
 $font-family-bold: roboto-bold;
+$font-family-medium: roboto-medium;
 $font-family-italic: roboto-italic;
 $font-family-bold-italic: roboto-bolditalic;
 
