Added the comments file

--- a/themes/customized/assets/sass/custom.scss
+++ b/themes/customized/assets/sass/custom.scss
@@ -4,6 +4,10 @@
 @import 'goToTop';
 @import 'blogsection';
 
+// @import 'pagination';
+// @import 'comments';
+// @import 'singlepost';
+
 
 body {
     font-family: $font-family;
