--- a/themes/customized/assets/sass/pagination.scss
+++ b/themes/customized/assets/sass/pagination.scss
@@ -1,5 +1,7 @@
 @import 'variables';
 
+
+// .pagination { margin: 0 auto 42px auto; }
 // .pagination {
 //    margin: 36px auto;
 //    text-align: center;
