Added the single page scss file

--- a/themes/customized/assets/sass/singlepage.scss
+++ b/themes/customized/assets/sass/singlepage.scss
@@ -1,1 +1,12 @@
 @import 'variables';
+
+main #sidebar {  
+    .socials a, .socials a:visited {
+        color: $color-grey-100;
+        text-decoration: none;
+
+        &:hover, &:active {
+            color: $color-grey-60;
+        }
+    }
+  }
