Updated the single html

--- a/themes/customized/layouts/_default/single.html
+++ b/themes/customized/layouts/_default/single.html
@@ -29,14 +29,14 @@
 
      <div id="secondary" class="four columns end">
         <aside id="sidebar">
-          <div class="widget widget_contact">
+          <div class="widget">
             <!--<h5>Address and Phone</h5>
             <p class="address">
               Test street<br>
               <span>(0) 123-456</span>
             </p> -->
-            <h5>Email and Social</h5>
-            <p>
+            <h2 class="widget-title">Email and Social</h2>
+            <p class="socials">
               E-mail: <a href="{{ .Site.Params.mail }}" target="_blank">{{ .Site.Params.mail_title }}</a><br>
               Instagram: <a href="{{ .Site.Params.instagram }}" target="_blank">{{ .Site.Title }}</a>
             </p>
