Renamed blogsection into blog and added the post css

--- a/themes/customized/assets/sass/custom.scss
+++ b/themes/customized/assets/sass/custom.scss
@@ -2,7 +2,7 @@
 @import 'header';
 @import 'footer';
 @import 'goToTop';
-@import 'blogsection';
+@import 'blog';
 
 // @import 'pagination';
 // @import 'comments';
